Fix for AXIS2-3574 - java.lang.NoClassDefFoundError while running java2wsdl or wsdl2java
Switching over just axis2.bat for now. 

Instead of running java2wsd.bat, please run "axis2.bat org.apache.ws.java2wsdl.Java2WSDL"
Instead of running wsdl2java.bat, please run "axis2.bat org.apache.axis2.wsdl.WSDL2Java"