@@ -61,16 +61,12 @@ goto end
 :okHome
 rem set the classes
 setlocal EnableDelayedExpansion
-rem loop through the libs and add them to the class path
-set AXIS2_CLASS_PATH=%AXIS2_HOME%
-FOR %%c in ("%AXIS2_HOME%\lib\*.jar") DO set AXIS2_CLASS_PATH=!AXIS2_CLASS_PATH!;%%c
 
 rem ----- Execute The Requested Command ---------------------------------------
 echo Using AXIS2_HOME:   %AXIS2_HOME%
 echo Using JAVA_HOME:    %JAVA_HOME%
-REM echo %AXIS2_CLASS_PATH%
 set _RUNJAVA="%JAVA_HOME%\bin\java"
 
-%_RUNJAVA% %JAVA_OPTS% -cp "!AXIS2_CLASS_PATH!" -Daxis2.repo="%AXIS2_HOME%\repository" -Daxis2.xml="%AXIS2_HOME%\conf\axis2.xml" %*
+%_RUNJAVA% %JAVA_OPTS% -Djava.ext.dirs="%AXIS2_HOME%\lib\" -Daxis2.repo="%AXIS2_HOME%\repository" -Daxis2.xml="%AXIS2_HOME%\conf\axis2.xml" %*
 endlocal
 :end
